# dirt-man

./: .gitignore  README.md
backend/: .gitignore  API_DOCUMENTATION.md  API_README.md  Cargo.toml  DYNAMODB_SCHEMA.md  README.md  build.sh  lint_and_test.py  openapi.yaml  postman_collection.json  proptest.toml  requirements.txt  template.yaml
backend/insights/: README.md  pytest.ini  requirements.txt
backend/insights/functions/: aggregator.py  api.py  device_status_updater.py  event_detector.py  insight_generator.py  requirements.txt  rollup_updater.py
backend/insights/shared/: __init__.py  device_status.py  dynamodb_helpers.py  dynamodb_retry.py  event_detection.py  idempotency.py  logging_utils.py  models.py  profile_learning.py  retry_utils.py  rollup_helpers.py  sensor_validation.py  time_utils.py
backend/insights/tests/: conftest.py  requirements-test.txt  test_aggregation_invariants.py  test_aggregator_unit.py  test_api_admin_queries.py  test_api_device_profile.py  test_api_events.py  test_api_insights.py  test_api_maintenance.py  test_device_status_unit.py  test_event_detection_unit.py  test_event_detector_handler_unit.py  test_profile_learning_unit.py  test_retry_utils.py  test_rollup_helpers_unit.py
backend/scripts/: README.md
backend/src/: auth.rs  config.rs  control.rs  data.rs  device_status_updater.rs  error.rs  router.rs
backend/tests/: property_api_key_hashing.rs  property_mac_validation.rs  property_timestamp_validation.rs  property_uuid_validation.proptest-regressions  property_uuid_validation.rs  test_device_registration.rs
(+164 files in other folders)
